Added owner ID to Turnovers in Implementation