@@ -5,15 +5,15 @@ import de.sky.common.database.DatabaseConnection;
 import de.sky.regular.income.api.detail.CreatedMetaInformation;
 import de.sky.regular.income.api.turnovers.*;
 import de.sky.regular.income.database.DatabaseSupplier;
+import de.sky.regular.income.users.UserProvider;
 import generated.sky.regular.income.tables.records.TurnoverFileImportRecord;
 import generated.sky.regular.income.tables.records.TurnoverRowRecord;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jooq.DSLContext;
 import org.jooq.Result;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.util.Assert;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.InputStream;
@@ -21,14 +21,13 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static generated.sky.regular.income.Tables.TURNOVER_FILE_IMPORT;
 import static generated.sky.regular.income.Tables.TURNOVER_ROW;
 import static org.jooq.impl.DSL.and;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 @Slf4j
 public class TurnoverCsvImporter {
     private final ChecksumComputer checksummer;
@@ -37,9 +36,11 @@ public class TurnoverCsvImporter {
     private final TurnoverFileParser parser;
     private final CategorySuggester categorySuggester;
 
+    private final UserProvider user;
+
     @Autowired
-    public TurnoverCsvImporter(ChecksumComputer checksummer, DatabaseSupplier db, TurnoverFileParser parser, CategorySuggester categorySuggester) {
-        this(checksummer, db.getDatabase(), parser, categorySuggester);
+    public TurnoverCsvImporter(ChecksumComputer checksummer, DatabaseSupplier db, TurnoverFileParser parser, CategorySuggester categorySuggester, UserProvider user) {
+        this(checksummer, db.getDatabase(), parser, categorySuggester, user);
     }
 
     public TurnoverImport createImport(ZonedDateTime ts, MultipartFile file, TurnoverImportPatch patch) throws Exception {
@@ -47,9 +48,13 @@ public class TurnoverCsvImporter {
         var checksum = checksummer.computeChecksum(content);
 
         return db.transactionWithResult(ctx -> {
+            UUID userId = user.getCurrentUser(ctx).getId();
+
             var imp = ctx.newRecord(TURNOVER_FILE_IMPORT);
             imp.setId(UUID.randomUUID());
             imp.setImportedAt(ts.toOffsetDateTime());
+
+            imp.setOwnerId(userId);
 
             imp.setFilename(file.getOriginalFilename());
             imp.setFileSize(file.getSize());
@@ -66,6 +71,8 @@ public class TurnoverCsvImporter {
                     .map(row -> {
                         var rec = ctx.newRecord(TURNOVER_ROW);
 
+                        rec.setId(UUID.randomUUID());
+                        rec.setOwnerId(userId);
                         rec.setTurnoverFile(imp.getId());
 
                         rec.setDate(row.getDate());
@@ -76,28 +83,33 @@ public class TurnoverCsvImporter {
 
                         rec.setCategoryId(row.getCategoryId());
 
-                        rec.setId(row.getChecksum());
                         rec.setChecksum(row.getChecksum());
                         rec.setLastUpdatedAt(ts.toOffsetDateTime());
 
                         return rec;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             ctx.batchInsert(rows).execute();
 
-            return fetchTurnoverImport(ctx, imp.getId());
+            return fetchTurnoverImport(ctx, userId, imp.getId());
         });
     }
 
     public TurnoverImport fetchTurnoverImport(UUID id) {
-        return db.transactionWithResult(ctx -> fetchTurnoverImport(ctx, id));
+        return db.transactionWithResult(ctx -> fetchTurnoverImport(ctx, user.getCurrentUser(ctx).getId(), id));
     }
 
-    private TurnoverImport fetchTurnoverImport(DSLContext ctx, UUID id) {
-        var rec = ctx.fetchOne(TURNOVER_FILE_IMPORT, TURNOVER_FILE_IMPORT.ID.eq(id));
+    private TurnoverImport fetchTurnoverImport(DSLContext ctx, UUID userId, UUID id) {
+        var rec = ctx.fetchOne(TURNOVER_FILE_IMPORT, and(
+                TURNOVER_FILE_IMPORT.OWNER_ID.eq(userId),
+                TURNOVER_FILE_IMPORT.ID.eq(id)
+        ));
 
-        var rows = ctx.fetch(TURNOVER_ROW, TURNOVER_ROW.TURNOVER_FILE.eq(id));
+        var rows = ctx.fetch(TURNOVER_ROW, and(
+                TURNOVER_ROW.OWNER_ID.eq(userId),
+                TURNOVER_ROW.TURNOVER_FILE.eq(id)
+        ));
 
         return map(rec, rows);
     }
@@ -105,27 +117,32 @@ public class TurnoverCsvImporter {
     public List<TurnoverImport> fetchTurnoverImports() {
         return db.transactionWithResult(ctx -> {
             log.trace("Fetching FileImports ...");
-            var imports = ctx.fetch(TURNOVER_FILE_IMPORT);
+            var imports = ctx.fetch(TURNOVER_FILE_IMPORT, TURNOVER_FILE_IMPORT.OWNER_ID.eq(user.getCurrentUser(ctx).getId()));
 
             log.trace("Fetching TurnoverRows ...");
-            var rows = ctx.fetch(TURNOVER_ROW).intoGroups(TURNOVER_ROW.TURNOVER_FILE);
+            var rows = ctx.fetch(TURNOVER_ROW, TURNOVER_ROW.OWNER_ID.eq(user.getCurrentUser(ctx).getId()))
+                    .intoGroups(TURNOVER_ROW.TURNOVER_FILE);
 
             log.debug("Fetched {} file imports with overall {} rows", imports.size(), rows.size());
 
             return imports.stream()
                     .map(rec -> map(rec, rows.get(rec.getId())))
-                    .collect(Collectors.toList());
+                    .toList();
         });
     }
 
     public void deleteImport(UUID id) {
         db.transactionWithoutResult(ctx -> {
+            UUID userId = user.getCurrentUser(ctx).getId();
+
             ctx.deleteFrom(TURNOVER_ROW)
                     .where(TURNOVER_ROW.TURNOVER_FILE.eq(id))
+                    .and(TURNOVER_ROW.OWNER_ID.eq(userId))
                     .execute();
 
             ctx.deleteFrom(TURNOVER_FILE_IMPORT)
                     .where(TURNOVER_FILE_IMPORT.ID.eq(id))
+                    .and(TURNOVER_FILE_IMPORT.OWNER_ID.eq(userId))
                     .execute();
         });
     }
@@ -145,23 +162,34 @@ public class TurnoverCsvImporter {
             log.info("Now enriching and mapping CSV rows ...");
 
             return records.stream()
+                    .filter(this::filterInvalidRows)
                     .map(rec -> enrichAndMap(suggester, alreadyExistentRows, rec))
                     .sorted(Comparator.comparing(TurnoverRow::getDate))
-                    .collect(Collectors.toUnmodifiableList());
+                    .toList();
         } finally {
             log.info("Previewing file was done in {}", sw.stop());
         }
     }
 
+    private boolean filterInvalidRows(TurnoverCsvParser.TurnoverRecord rec) {
+        if (rec.getDate() == null || rec.getAmountInCents() == 0)
+            return false;
+        return true;
+    }
+
     private Set<String> findExistentRows(List<TurnoverCsvParser.TurnoverRecord> recs) {
         var minDate = recs.stream()
+                .filter(Objects::nonNull)
                 .map(TurnoverCsvParser.TurnoverRecord::getDate)
+                .filter(Objects::nonNull)
                 .min(Comparator.naturalOrder())
-                .orElse(LocalDate.MIN);
+                .orElse(LocalDate.of(1500, 1, 1));
         var maxDate = recs.stream()
+                .filter(Objects::nonNull)
                 .map(TurnoverCsvParser.TurnoverRecord::getDate)
+                .filter(Objects::nonNull)
                 .max(Comparator.naturalOrder())
-                .orElse(LocalDate.MAX);
+                .orElse(LocalDate.of(2500, 12, 31));
 
         return db.transactionWithResult(ctx ->
                 ctx.selectDistinct(TURNOVER_ROW.CHECKSUM)
@@ -170,6 +198,7 @@ public class TurnoverCsvImporter {
                                 TURNOVER_ROW.DATE.greaterOrEqual(minDate),
                                 TURNOVER_ROW.DATE.lessOrEqual(maxDate)
                         ))
+                        .and(TURNOVER_ROW.OWNER_ID.eq(user.getCurrentUser(ctx).getId()))
                         .fetch()
                         .intoSet(TURNOVER_ROW.CHECKSUM)
         );
@@ -210,10 +239,9 @@ public class TurnoverCsvImporter {
     }
 
     private static TurnoverRow map(TurnoverRowRecord row) {
-        Assert.isTrue(Objects.equals(row.getId(), row.getChecksum()), () -> String.format("Turnover Row must have ID == Checksum (Row: %s)", row.getId()));
-
         return TurnoverRow.builder()
-                .checksum(row.getId())
+                .id(row.getId())
+                .checksum(row.getChecksum())
                 .date(row.getDate())
                 .description(row.getDescription())
                 .amountInCents(row.getAmountValueCents())
